Changes in version 2.0.9.2
--------------------------

  * window icons have been implemented on non-Windows platforms if the
    emulator is built with FLTK 1.3.3 or newer
  * various minor bug fixes

Changes in version 2.0.9.1
--------------------------

  * some debugger changes related to ignore breakpoints
  * it is possible to delete single breakpoints in Lua scripts by using
    a negative priority value
  * minor 6845 CRTC emulation bug fix
  * fixed bugs in closing the debugger window with the Esc key

Changes in version 2.0.9
------------------------

  * implemented CPC floppy drive controller (uPD765) emulation:
    - it supports standard and extended .DSK image files, as well as
      using a real disk in the PC floppy drive (the latter is not very
      useful in practice, since it is limited to standard PC format DD
      (720K) disks, which are not supported by AMSDOS)
    - 4 drives can be emulated (although AMSDOS will only use 2)
    - there is (not perfect) emulation of the timing of disk rotation,
      stepping, head (un)load, and data transfers; however, this may
      not work if the image file includes a track format that is not
      possible on a real DD disk (~6250 bytes per track)
    - the FORMAT TRACK (0x0D) command is unimplemented - it will always
      report a write protect error
    - the floppy drive emulation has not been tested extensively yet,
      so there may be problems with unusual disk formats, rarely used
      FDC commands and parameters, and some copy protections
    - reading the I/O ports 80H-9FH in the debugger will return some
      debugging information about the FDC emulation (see the README file
      for details)
    - changes to the installer/packaging: new machine configuration
      files have been added that include AMSDOS (the default is now
      CPC 6128 with AMSDOS), the disk.zip package includes an empty CPC
      disk image, and on Windows .DSK files can be associated with the
      emulator