@@ -1,6 +1,8 @@
 Changes in version 2.0.9.2
 --------------------------
 
+  * when loading a snapshot from the command line, the machine type is
+    autodetected from the file if not specified
   * window icons have been implemented on non-Windows platforms if the
     emulator is built with FLTK 1.3.3 or newer
   * various minor bug fixes
